# test_conan

./: .gitignore  LICENSE  README.md
exeC/: CMakeLists.txt  conanfile.py
exeC/src/: main.cpp
libA/: CMakeLists.txt  conanfile.py
libA/include/: libA.h
libA/src/: libA.cpp
libB/: CMakeLists.txt  conanfile.py
libB/include/: libB.h
libB/src/: libB.cpp
